--- a/cloudbuild.backend.yaml
+++ b/cloudbuild.backend.yaml
@@ -22,7 +22,7 @@ steps:
         "us-central1",
         "--allow-unauthenticated",
         "--set-env-vars",
-        "ACCESS_TOKEN=${_ACCESS_TOKEN},REFRESH_TOKEN=${_REFRESH_TOKEN},DB_HOST=${_DB_HOST},DB_NAME=${_DB_NAME},DB_PASSWORD=${_DB_PASSWORD},DB_USERNAME=${_DB_USERNAME},SEEDER_PASSWORD=${_SEEDER_PASSWORD}",
+        "ACCESS_TOKEN=${_ACCESS_TOKEN},REFRESH_TOKEN=${_REFRESH_TOKEN},DB_HOST=${_DB_HOST},DB_NAME=${_DB_NAME},DB_PASSWORD=${_DB_PASSWORD},DB_USER=${_DB_USER},SEEDER_PASSWORD=${_SEEDER_PASSWORD}",
       ]
 
 options:
