--- a/cloudbuild.backend.yaml
+++ b/cloudbuild.backend.yaml
@@ -22,7 +22,7 @@ steps:
         "us-central1",
         "--allow-unauthenticated",
         "--set-env-vars",
-        "REFRESH_TOKEN_SECRET=${_REFRESH_TOKEN_SECRET},REFRESH_TOKEN_EXPIRES_IN=${_REFRESH_TOKEN_EXPIRES_IN},DB_HOST=${_DB_HOST},DB_NAME=${_DB_NAME},DB_PASSWORD=${_DB_PASSWORD},DB_USER=${_DB_USER},SEEDER_PASSWORD=${_SEEDER_PASSWORD},JWT_SECRET=${_JWT_SECRET},JWT_EXPIRES_IN=${_JWT_EXPIRES_IN},PORT=${_PORT},DB_DIALECT=${_DB_DIALECT},DB_PORT=${_DB_PORT}",
+        "REFRESH_TOKEN_SECRET=${_REFRESH_TOKEN_SECRET},REFRESH_TOKEN_EXPIRES_IN=${_REFRESH_TOKEN_EXPIRES_IN},DB_HOST=${_DB_HOST},DB_NAME=${_DB_NAME},DB_PASSWORD=${_DB_PASSWORD},DB_USER=${_DB_USER},SEEDER_PASSWORD=${_SEEDER_PASSWORD},JWT_SECRET=${_JWT_SECRET},JWT_EXPIRES_IN=${_JWT_EXPIRES_IN},DB_DIALECT=${_DB_DIALECT},DB_PORT=${_DB_PORT}",
       ]
 
 options:
