--- a/cloudbuild.backend.yaml
+++ b/cloudbuild.backend.yaml
@@ -1,19 +1,19 @@
 steps:
   - name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/be-trigger-ta-alung", "."]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/be-perpusupn", "."]
     dir: 'backend'
 
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/be-trigger-ta-alung"]
+    args: ["push", "gcr.io/$PROJECT_ID/be-perpusupn"]
 
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       [
         "run",
         "deploy",
-        "be-trigger-ta-alung",
+        "be-perpusupn",
         "--image",
-        "gcr.io/$PROJECT_ID/be-trigger-ta-alung",
+        "gcr.io/$PROJECT_ID/be-perpusupn",
         "--timeout",
         "1000s",
         "--port",
